--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt="Yawning lion"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt="Yawning lion"
+    title="Time for a nap"
+    />
   </body>
 </html>
